src/static/index.css
@charset "UTF-8";

/* ID input */
#room-id-input {
  width: 8em;
  text-align: center;
}

#room-id-error {
  color: hsl(0, 100%, 70%);
  min-height: 1.2em;
}


/* Join buttons */
#join-participant, #join-moderator {
  text-decoration: none;
  color: inherit;
}
.link-disabled {
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.2;
}


/* Guide link */
#guide-links {
  margin-top: 10em;
}

